# diffusiongemma

./: .gitignore  README.md  initial_plan.md  pyproject.toml
harness/: __init__.py  causal.py  chat.py  cli.py  config.py  drafter.py  metrics.py  models.py  prompts.py  results_io.py  tokenizer_check.py  types.py  verifier.py
prompts/: chat.jsonl  code.jsonl  prose.jsonl  structured.jsonl
results/: block_size_validation_predictions.md  causal_quality_eval_preregistration.md
results/20260611-225044-smoke/: config.json
results/20260611-233132-smoke/: blocks.jsonl  config.json  summary.md
results/20260612-004541-smoke-real/: config.json
results/20260612-005953-smoke-real/: summary.md
results/20260612-013843-smoke-real/: blocks.jsonl  summary.md
results/20260612-014433-run1/: blocks.jsonl  config.json  summary.md
results/20260612-022654-repro8/: config.json  summary.md
results/20260612-024252-step2/: blocks.jsonl  config.json  pass1_diag.jsonl
results/20260612-024609-step2b/: blocks.jsonl  config.json  pass1_diag.jsonl  summary.md
results/20260612-030133-step2full/: blocks.jsonl  config.json  pass1_diag.jsonl  summary.md  summary_corrected.md
results/20260612-040008-run_final/: blocks.jsonl  config.json  pass1_diag.jsonl  summary.md
results/20260612-051126-b16/: blocks.jsonl  (+3 more)
scripts/: block_size_sweep.py  causal_quality_compare.py  causal_quality_eval.py  causal_quality_gen.py  causal_self_agreement.py  compare_runs.py  probe_causal_mode.py  probe_drafts.py  probe_internals.py  probe_speed.py  probe_vllm.py  recompute_summary.py  sanity_check.py  validate_block_size.py  vllm_agreement.py
tests/: test_causal.py  test_metrics.py  test_pipeline.py  test_quality_eval.py  test_vllm_adapter.py
(+30 files in other folders)
